@@ -1496,7 +1496,7 @@ commands given here will actually operate on the *Calculator* stack."
         ;; next time Calc is called, the window will be the same size
         ;; as the current window.
         (if (and win
-                 (< (window-height win) (1- (frame-height)))
+		 (not (window-full-height-p win))
                  (window-full-width-p win) ; avoid calc-keypad
                  (not (get-buffer-window "*Calc Keypad*")))
             (setq calc-window-height (- (window-height win) 2)))
